@@ -6,6 +6,7 @@ $Id$
 -------------------------------------------------------------------------------
 * Sun, Jul 15 2012
 	- add strrncmp api
+	- add search_process api
 
 * Sun, Jan  8 2012
 	- fixed convert_punycode when charset is null
